--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NataliiaHrynchuk/goit-nodejs-homework.git"
@@ -19,6 +14,16 @@
     "url": "https://github.com/NataliiaHrynchuk/goit-nodejs-homework/issues"
   },
   "homepage": "https://github.com/NataliiaHrynchuk/goit-nodejs-homework#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "commander": "^9.4.1",
+    "express": "^4.18.2",
+    "nanoid": "^3.3.4"
+  },
   "devDependencies": {
     "nodemon": "^2.0.20"
   }
